# Enkly

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
enkly/: __init__.py  __main__.py  app.py
enkly/api/: routes.py
enkly/engine/: connection.py  query_builder.py  semantic.py
enkly/static/: app.js  index.html  style.css
models/: sample_sales.yaml
